# docs/swagger/swagger.json
@@ -133,7 +133,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/IRIS-Server_internal_models.MCPOperation"
+                                "$ref": "#/definitions/models.MCPOperation"
                             }
                         }
                     },
@@ -206,7 +206,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/IRIS-Server_internal_models.MCPSiteplan"
+                                "$ref": "#/definitions/models.MCPSiteplan"
                             }
                         }
                     },
@@ -298,7 +298,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/IRIS-Server_internal_models.MCPConfig"
+                            "$ref": "#/definitions/models.MCPConfig"
                         }
                     }
                 ],
@@ -343,7 +343,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/IRIS-Server_internal_models.TableauResource"
+                                "$ref": "#/definitions/models.TableauResource"
                             }
                         }
                     },
@@ -386,7 +386,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handlers.PositionRequest"
+                            "$ref": "#/definitions/handlers.PositionRequest"
                         }
                     }
                 ],
@@ -437,7 +437,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/IRIS-Server_internal_models.MCPRun"
+                                "$ref": "#/definitions/models.Run"
                             }
                         }
                     },
@@ -480,7 +480,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handlers.PositionRequest"
+                            "$ref": "#/definitions/handlers.PositionRequest"
                         }
                     }
                 ],
@@ -602,7 +602,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/IRIS-Server_internal_models.BaseTracker"
+                                "$ref": "#/definitions/models.BaseTracker"
                             }
                         }
                     },
@@ -785,7 +785,18 @@
         }
     },
     "definitions": {
-        "IRIS-Server_internal_models.BaseTracker": {
+        "handlers.PositionRequest": {
+            "type": "object",
+            "properties": {
+                "lat": {
+                    "type": "number"
+                },
+                "long": {
+                    "type": "number"
+                }
+            }
+        },
+        "models.BaseTracker": {
             "type": "object",
             "properties": {
                 "battery": {
@@ -801,14 +812,14 @@
                     "type": "string"
                 },
                 "position": {
-                    "$ref": "#/definitions/IRIS-Server_internal_models.Position"
+                    "$ref": "#/definitions/models.Position"
                 },
                 "resource": {
-                    "$ref": "#/definitions/IRIS-Server_internal_models.TableauResource"
+                    "$ref": "#/definitions/models.TableauResource"
                 }
             }
         },
-        "IRIS-Server_internal_models.MCPConfig": {
+        "models.MCPConfig": {
             "type": "object",
             "properties": {
                 "api_key": {
@@ -835,7 +846,7 @@
                 }
             }
         },
-        "IRIS-Server_internal_models.MCPOperation": {
+        "models.MCPOperation": {
             "type": "object",
             "properties": {
                 "active": {
@@ -848,14 +859,14 @@
                     "type": "string"
                 },
                 "place": {
-                    "$ref": "#/definitions/IRIS-Server_internal_models.MCPPlace"
+                    "$ref": "#/definitions/models.MCPPlace"
                 },
                 "title": {
                     "type": "string"
                 }
             }
         },
-        "IRIS-Server_internal_models.MCPPlace": {
+        "models.MCPPlace": {
             "type": "object",
             "properties": {
                 "id": {
@@ -866,39 +877,7 @@
                 }
             }
         },
-        "IRIS-Server_internal_models.MCPRun": {
-            "type": "object",
-            "properties": {
-                "active": {
-                    "type": "boolean"
-                },
-                "address": {
-                    "type": "string"
-                },
-                "hasPatient": {
-                    "type": "boolean"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "lat": {
-                    "type": "number"
-                },
-                "long": {
-                    "type": "number"
-                },
-                "obj": {
-                    "type": "string"
-                },
-                "operation": {
-                    "$ref": "#/definitions/IRIS-Server_internal_models.MCPOperation"
-                },
-                "place": {
-                    "type": "string"
-                }
-            }
-        },
-        "IRIS-Server_internal_models.MCPSiteplan": {
+        "models.MCPSiteplan": {
             "type": "object",
             "properties": {
                 "id": {
@@ -909,7 +888,7 @@
                 }
             }
         },
-        "IRIS-Server_internal_models.Position": {
+        "models.Position": {
             "type": "object",
             "properties": {
                 "lat": {
@@ -920,7 +899,7 @@
                 }
             }
         },
-        "IRIS-Server_internal_models.Resource": {
+        "models.Resource": {
             "type": "object",
             "properties": {
                 "id": {
@@ -934,7 +913,51 @@
                 }
             }
         },
-        "IRIS-Server_internal_models.TableauResource": {
+        "models.Run": {
+            "type": "object",
+            "properties": {
+                "active": {
+                    "type": "boolean"
+                },
+                "address": {
+                    "type": "string"
+                },
+                "deleted": {
+                    "type": "boolean"
+                },
+                "hasPatient": {
+                    "type": "boolean"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "lat": {
+                    "type": "number"
+                },
+                "long": {
+                    "type": "number"
+                },
+                "nr": {
+                    "type": "integer"
+                },
+                "obj": {
+                    "type": "string"
+                },
+                "operation": {
+                    "$ref": "#/definitions/models.MCPOperation"
+                },
+                "place": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
+                },
+                "unsetPosition": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.TableauResource": {
             "type": "object",
             "properties": {
                 "id": {
@@ -950,21 +973,13 @@
                     "type": "string"
                 },
                 "resource": {
-                    "$ref": "#/definitions/IRIS-Server_internal_models.Resource"
+                    "$ref": "#/definitions/models.Resource"
                 },
                 "status": {
                     "type": "integer"
-                }
-            }
-        },
-        "internal_handlers.PositionRequest": {
-            "type": "object",
-            "properties": {
-                "lat": {
-                    "type": "number"
                 },
-                "long": {
-                    "type": "number"
+                "unsetPosition": {
+                    "type": "boolean"
                 }
             }
         }
